Fixing work card front label readability on mobile. Attempting to fix glass effect not working on iOS.

--- a/work/assets/css/styles.css
+++ b/work/assets/css/styles.css
@@ -445,13 +445,14 @@ section#work > .work-card.active {
 
 .work-card .work-card-front {
     background-size: cover;
+    background-color: #343434;
     filter: grayscale(100%);
     display: flex;
     flex-direction: column;
 }
 
 .work-card .work-card-front-label {
-    background: rgba(255, 255, 255, 0.9);
+    background: rgba(255, 255, 255, 0.8);
     margin-top: auto;
     padding: 10px;
     transition: all .3s linear;
@@ -476,7 +477,7 @@ section#work > .work-card.active {
 
 .work-card-gallery-item {
     background-size: contain;
-    background-position: center center;
+    background-position: top center;
     background-repeat: no-repeat;
     background-color: #343434;
     width: 100%;
@@ -626,8 +627,8 @@ section#work > .work-card.active {
 .work-card.active .work-card-front-label {
     margin: auto;
     width: 50%;
+    -webkit-backdrop-filter: blur(15px);
     backdrop-filter: blur(15px);
-    background: rgba(255, 255, 255, 0.6);
     box-shadow: 0 0 10px 4px rgba(0 0 0 / 0.25);
 }
 
@@ -658,6 +659,8 @@ section#work > .work-card.active {
     .work-card.active .work-card-front-label {
         margin: auto 10px 10px;
         width: calc( 100% - 20px);
+        height: 70%;
+        overflow-y: auto;
     }
 }
 
